--- a/index.html
+++ b/index.html
@@ -1,35 +1,114 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Navbar</title>
-    <link rel="stylesheet" href="./css/style.css"/>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!--FONT AWARSOME ICON-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+	<!--BOODSTRAP CSS-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+	<!--CSS-->
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
+
+	<title>Layout</title>
+
 </head>
-
 <body>
-    <header>
-        <nav>
-        <a class="logo" href="/">Tiger Codes</a>
-        <div class="mobile-menu">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-        <ul class="nav-list">
-            <li><a href="#">Início</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Projetos</a></li>
-            <li><a href="#">Contato</a></li>
+
+<header>
+	<a href="./layout.html" id="logo">MORAES SALGADOS&DOCÊS</a>
+	<button id="openMenu">&#9776;</button>
+	<nav id="menu">
+		<button id="closeMenu">X</button>
+		<a href="#">Inicio</a>
+		<a href="#">Salgados&Docês</a>
+		<a href="#">Sobre</a>
+		<a href="">Contato</a>
+	</nav>
+</header>
+
+<main>
+  <div class="galeria">
+    <div class="content">
+        <img src="./img/COXINHA.png">
+        <h3>coxa</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, molestias, possimus facilis</p>
+        <h6>R$1299,55</h6>
+        <ul>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star"></i></li>
         </ul>
-        </nav>
-    </header>
+        <button class="cmp-1">Compre</button>
+    </div>
 
-    <main>
+    <div class="content">
+        <img src="./img/BOL_QUEIJO.jpg">
+        <h3>BOL_QUEIJO</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, molestias, possimus facilis</p>
+        <h6>R$1299,55</h6>
+        <ul>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star"></i></li>
+            <li><i class="fa fa-star"></i></li>
+        </ul>
+        <button class="cmp-1">Compre</button>
+    </div>
 
-    </main>
+    <div class="content">
+        <img src="./img/CROQUETE_CARNE.webp">
+        <h3>coxa</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, molestias, possimus facilis</p>
+        <h6>R$1299,55</h6>
+        <ul>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star"></i></li>
+        </ul>
+        <button class="cmp-1">Compre</button>
+    </div>
 
-<script src="./script.js"></script>
+    <div class="content">
+        <img src="./img/KIBE.jpeg">
+        <h3>coxa</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, molestias, possimus facilis</p>
+        <h6>R$1299,55</h6>
+        <ul>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star"></i></li>
+        </ul>
+        <button class="cmp-1">Compre</button>
+    </div>
+  </div>
+</main>
+
+<!-- <aside>
+	Aside
+</aside> -->
+
+	
+<footer>
+	Footer
+</footer>
+
+
+	<!--JAVASCRIPT-->
+	<script type="text/javascript" src="./java/script.js"></script>
+
+	<!--JAVASCRIPT BOODSTRAP-->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
-</html>
