--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!--CSS-->
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 
-	<title>Layout</title>
+	<title>MORAES SALGADOS&DOCÊS</title>
 
 </head>
 <body>
