mexi no css melhorei e tambem no index e img nova

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 	<!--CSS-->
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 
-	<title>MORAES SALGADOS&DOCÊS</title>
+	<title>MORAES SALGADOS</title>
 
 </head>
 <body>
 
 <header>
-	<a href="./layout.html" id="logo">MORAES SALGADOS&DOCÊS</a>
+	<a href="./layout.html" id="logo">MORAES SALGADOS</a>
 	<button id="openMenu">&#9776;</button>
 	<nav id="menu">
 		<button id="closeMenu">X</button>
 		<a href="#">Inicio</a>
-		<a href="#">Salgados&Docês</a>
+		<a href="#">Salgados</a>
 		<a href="#">Sobre</a>
-		<a href="">Contato</a>
+		<a href="#">Contato</a>
 	</nav>
 </header>
 
@@ -34,9 +34,9 @@
   <div class="galeria">
     <div class="content">
         <img src="./img/COXINHA.png">
-        <h3>coxa</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, molestias, possimus facilis</p>
-        <h6>R$1299,55</h6>
+        <h3>Coxinha</h3>
+        <p>Vários Tipos de Sabores</p>
+        <h6>R$5,00 Un.</h6>
         <ul>
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star checked"></i></li>
@@ -44,14 +44,14 @@
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star"></i></li>
         </ul>
-        <button class="cmp-1">Compre</button>
+        <button class="cmp-1">Eu Quero!</button>
     </div>
 
     <div class="content">
         <img src="./img/BOL_QUEIJO.jpg">
-        <h3>BOL_QUEIJO</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, molestias, possimus facilis</p>
-        <h6>R$1299,55</h6>
+        <h3>Bolinhos</h3>
+        <p>Vários Tipos de Sabores</p>
+        <h6>R$5,00 Un.</h6>
         <ul>
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star checked"></i></li>
@@ -59,14 +59,14 @@
             <li><i class="fa fa-star"></i></li>
             <li><i class="fa fa-star"></i></li>
         </ul>
-        <button class="cmp-1">Compre</button>
+        <button class="cmp-1">Eu Quero!</button>
     </div>
 
     <div class="content">
         <img src="./img/CROQUETE_CARNE.webp">
-        <h3>coxa</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, molestias, possimus facilis</p>
-        <h6>R$1299,55</h6>
+        <h3>Croquete</h3>
+        <p>Vários Tipos de Sabores</p>
+        <h6>R$5,00 Un.</h6>
         <ul>
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star checked"></i></li>
@@ -74,14 +74,14 @@
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star"></i></li>
         </ul>
-        <button class="cmp-1">Compre</button>
+        <button class="cmp-1">Eu Quero!</button>
     </div>
 
     <div class="content">
         <img src="./img/KIBE.jpeg">
-        <h3>coxa</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, molestias, possimus facilis</p>
-        <h6>R$1299,55</h6>
+        <h3>Kibe</h3>
+        <p>Vários Tipos de Sabores</p>
+        <h6>R$5,00 Un.</h6>
         <ul>
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star checked"></i></li>
@@ -89,8 +89,84 @@
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star"></i></li>
         </ul>
-        <button class="cmp-1">Compre</button>
+        <button class="cmp-1">Eu Quero!</button>
     </div>
+
+    <div class="content">
+      <img src="./img/CROQUETE_PRESUNTO.jpg">
+      <h3>Croquete</h3>
+      <p>Vários Tipos de Sabores</p>
+      <h6>R$5,00 Un.</h6>
+      <ul>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star"></i></li>
+      </ul>
+      <button class="cmp-1">Eu Quero!</button>
+    </div>
+
+    <div class="content">
+      <img src="./img/EMPADA.jpg">
+      <h3>Empadinha</h3>
+      <p>Vários Tipos de Sabores</p>
+      <h6>R$5,00 Un.</h6>
+      <ul>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star"></i></li>
+      </ul>
+      <button class="cmp-1">Eu Quero!</button>
+    </div>
+
+    <div class="content">
+      <img src="./img/RISOLES_CARNE.jpg">
+      <h3>Risoles</h3>
+      <p>Vários Tipos de Sabores</p>
+      <h6>R$5,00 Un.</h6>
+      <ul>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star"></i></li>
+      </ul>
+      <button class="cmp-1">Eu Quero!</button>
+    </div>
+
+    <div class="content">
+      <img src="./img/RISOLES_PRESUNTO.jpeg">
+      <h3>Riles</h3>
+      <p>Vários Tipos de Sabores</p>
+      <h6>R$5,00 Un.</h6>
+      <ul>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star"></i></li>
+      </ul>
+      <button class="cmp-1">Eu Quero!</button>
+    </div>
+
+    <div class="content">
+      <img src="./img/SALSICHA.jpg">
+      <h3>Enroladinho de Salsicha</h3>
+      <p>Feito no maior amor e carinho, com toda a tecnologia de alta qualidade</p>
+      <h6>R$5,00 Un.</h6>
+      <ul>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star"></i></li>
+      </ul>
+      <button class="cmp-1">Eu Quero!</button>
+  </div>
+
   </div>
 </main>
 
