--- a/paginas/sal.html
+++ b/paginas/sal.html
@@ -4,14 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!--FONT AWARSOME ICON-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <!--FONT AWARSOME ICON-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
 	<!--BOODSTRAP CSS-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 	<!--CSS-->
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 
 	<title>MORAES SALGADOS</title>
 
@@ -19,18 +19,18 @@
 <body>
 
 <header>
-	<a href="./layout.html" id="logo">MORAES SALGADOS</a>
+	<a href="../index.html" id="logo">MORAES SALGADOS</a>
 	<button id="openMenu">&#9776;</button>
 	<nav id="menu">
 		<button id="closeMenu">X</button>
-		<a href="./index.html">Inicio</a>
+		<a href="../index.html">Inicio</a>
 		<a href="./paginas/sal.html">Salgados</a>
 		<a href="#">Sobre</a>
 		<a href="#">Contato</a>
 	</nav>
 </header>
 
-<main>
+<!-- <main>
   <div class="galeria">
     <div class="content">
         <img src="./img/COXINHA.png">
@@ -168,7 +168,7 @@
   </div>
 
   </div>
-</main>
+</main> -->
 
 <!-- <aside>
 	Aside
@@ -181,7 +181,7 @@
 
 
 	<!--JAVASCRIPT-->
-	<script type="text/javascript" src="./js/script.js"></script>
+	<script type="text/javascript" src="../js/script.js"></script>
 
 	<!--JAVASCRIPT BOODSTRAP-->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
