--- a/PASSO_PASSO/testes/mobile/mobile.html
+++ b/PASSO_PASSO/testes/mobile/mobile.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="pt-br" >
 <head>
+
   <meta charset="UTF-8">
   <title>CodePen - Navigation</title>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css'><link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css'>
+  <link rel="stylesheet" href="./mobile.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+
 <html>
 
 <head>
@@ -15,6 +17,7 @@
   <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
 <div id="navbarContainer">
   <div id="navbar">
@@ -50,8 +53,8 @@
 </body>
 
 </html>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.min.js'></script><script  src="./script.js"></script>
+  <script src="./troca.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.min.js'></script><script  src="./mobile.js"></script>
 
 </body>
 </html>
