--- a/paginas/sal.html
+++ b/paginas/sal.html
@@ -24,7 +24,7 @@
 	<nav id="menu">
 		<button id="closeMenu">X</button>
 		<a href="../index.html">Inicio</a>
-		<a href="./paginas/sal.html">Salgados</a>
+		<a href="./sal.html">Salgados</a>
 		<a href="#">Sobre</a>
 		<a href="#">Contato</a>
 	</nav>
