--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <header>
-	<a href="./layout.html" id="logo">MORAES SALGADOS</a>
+	<a href="./index.html" id="logo">MORAES SALGADOS</a>
 	<button id="openMenu">&#9776;</button>
 	<nav id="menu">
 		<button id="closeMenu">X</button>
