--- a/paginas/sal.html
+++ b/paginas/sal.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<header>
+<!-- <header>
 	<a href="../index.html" id="logo">MORAES SALGADOS</a>
 	<button id="openMenu">&#9776;</button>
 	<nav id="menu">
@@ -28,7 +28,7 @@
 		<a href="#">Sobre</a>
 		<a href="#">Contato</a>
 	</nav>
-</header>
+</header> -->
 
 <!-- <main>
   <div class="galeria">
