--- a/paginas/sal.html
+++ b/paginas/sal.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<!-- <header>
+<header>
 	<a href="../index.html" id="logo">MORAES SALGADOS</a>
 	<button id="openMenu">&#9776;</button>
 	<nav id="menu">
@@ -28,9 +28,9 @@
 		<a href="#">Sobre</a>
 		<a href="#">Contato</a>
 	</nav>
-</header> -->
+</header>
 
-<!-- <main>
+<main>
   <div class="galeria">
     <div class="content">
         <img src="./img/COXINHA.png">
@@ -168,7 +168,7 @@
   </div>
 
   </div>
-</main> -->
+</main>
 
 <!-- <aside>
 	Aside
