--- a/paginas/sal.html
+++ b/paginas/sal.html
@@ -4,6 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--FONT IONICONS-->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
     <!--FONT AWARSOME ICON-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
@@ -11,7 +15,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 	<!--CSS-->
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 
 	<title>MORAES SALGADOS</title>
 
@@ -31,34 +35,91 @@
 </header>
 
 <main>
+    <!-- <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <div class="card">
+                    <div class="content">
+                        <div class="profile">
+                            <img src="https://im.ge/i/9G1ApY" alt="salcicha">
+                        </div>
+                        <h2>Teste <br> <span>Teste de Card-Dropdown</span></h2>
+                    </div>
+                    <ul class="nav">
+                        <li>
+                            <ion-icon name="archive-outline"></ion-icon>
+                            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit</a>
+                        </li>
+                    </ul>
+                    <div class="toggle">
+                        <ion-icon name="chevron-down-outline"></ion-icon>
+                    </div>
+                </div>
+          </div>
+          <div class="col-sm">
+            <div class="card">
+                    <div class="content">
+                        <div class="profile">
+                            <img src="./img/profile.jpg" alt="profile">
+                        </div>
+                        <h2>Teste <br> <span>Teste de Card-Dropdown</span></h2>
+                    </div>
+                    <ul class="nav">
+                        <li>
+                            <ion-icon name="archive-outline"></ion-icon>
+                            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit</a>
+                        </li>
+                    </ul>
+                    <div class="toggle">
+                        <ion-icon name="chevron-down-outline"></ion-icon>
+                    </div>
+                </div>
+          </div>
+          <div class="col-sm">
+            <div class="card">
+                    <div class="content">
+                        <div class="profile">
+                            <img src="./img/profile.jpg" alt="profile">
+                        </div>
+                        <h2>Teste <br> <span>Teste de Card-Dropdown</span></h2>
+                    </div>
+                    <ul class="nav">
+                        <li>
+                            <ion-icon name="archive-outline"></ion-icon>
+                            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit</a>
+                        </li>
+                    </ul>
+                    <div class="toggle">
+                        <ion-icon name="chevron-down-outline"></ion-icon>
+                    </div>
+                </div>
+          </div>
+        </div>
+    </div> -->
+
   <div class="galeria">
     <div class="content">
-        <img src="./img/COXINHA.png">
-        <h3>Coxinha</h3>
-        <p>Vários Tipos de Sabores</p>
-        <h6>R$5,00 Un.</h6>
-        <ul>
-          <i class="fa-solid fa-droplet"></i>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star"></i></li>
+            <div class="profile">
+                <img src="https://i.im.ge/2023/08/03/9G1ApY.SALSICHA.jpg" alt="salcicha">
+            </div>
+            <h2>Salsicha<br> <span>Empanada</span></h2>
+        <ul class="nav">
+            <li>
+                <ion-icon name="archive-outline"></ion-icon>
+                <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eius eum animi dolore laboriosam, voluptatem ab ipsam, distinctio, repudiandae eveniet doloribus quae incidunt quis recusandae ipsum quaerat accusamus. Molestiae, laboriosam!</a>
+            </li>
         </ul>
-        <button class="cmp-1">Eu Quero!</button>
+        <div class="toggle">
+            <ion-icon name="arrow-down-outline"></ion-icon>
+        </div>
     </div>
+
 
     <div class="content">
         <img src="./img/BOL_QUEIJO.jpg">
         <h3>Bolinhos</h3>
         <p>Vários Tipos de Sabores</p>
         <h6>R$5,00 Un.</h6>
-        <ul>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star"></i></li>
-            <li><i class="fa fa-star"></i></li>
-        </ul>
         <button class="cmp-1">Eu Quero!</button>
     </div>
 
@@ -67,13 +128,6 @@
         <h3>Croquete</h3>
         <p>Vários Tipos de Sabores</p>
         <h6>R$5,00 Un.</h6>
-        <ul>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star"></i></li>
-        </ul>
         <button class="cmp-1">Eu Quero!</button>
     </div>
 
@@ -82,13 +136,6 @@
         <h3>Kibe</h3>
         <p>Vários Tipos de Sabores</p>
         <h6>R$5,00 Un.</h6>
-        <ul>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star"></i></li>
-        </ul>
         <button class="cmp-1">Eu Quero!</button>
     </div>
 
@@ -97,13 +144,6 @@
       <h3>Croquete</h3>
       <p>Vários Tipos de Sabores</p>
       <h6>R$5,00 Un.</h6>
-      <ul>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star"></i></li>
-      </ul>
       <button class="cmp-1">Eu Quero!</button>
     </div>
 
@@ -112,13 +152,6 @@
       <h3>Empadinha</h3>
       <p>Vários Tipos de Sabores</p>
       <h6>R$5,00 Un.</h6>
-      <ul>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star"></i></li>
-      </ul>
       <button class="cmp-1">Eu Quero!</button>
     </div>
 
@@ -127,13 +160,6 @@
       <h3>Risoles</h3>
       <p>Vários Tipos de Sabores</p>
       <h6>R$5,00 Un.</h6>
-      <ul>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star"></i></li>
-      </ul>
       <button class="cmp-1">Eu Quero!</button>
     </div>
 
@@ -142,13 +168,6 @@
       <h3>Riles</h3>
       <p>Vários Tipos de Sabores</p>
       <h6>R$5,00 Un.</h6>
-      <ul>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star"></i></li>
-      </ul>
       <button class="cmp-1">Eu Quero!</button>
     </div>
 
@@ -157,17 +176,11 @@
       <h3>Enroladinho de Salsicha</h3>
       <p>Feito no maior amor e carinho, com toda a tecnologia de alta qualidade</p>
       <h6>R$5,00 Un.</h6>
-      <ul>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star"></i></li>
-      </ul>
       <button class="cmp-1">Eu Quero!</button>
   </div>
 
   </div>
+
 </main>
 
 <!-- <aside>
@@ -181,6 +194,7 @@
 
 
 	<!--JAVASCRIPT-->
+    <script src="./js/script.js"></script>
 	<script type="text/javascript" src="../js/script.js"></script>
 
 	<!--JAVASCRIPT BOODSTRAP-->
