--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <body>
 
 <header>
-	<a href="./index.html" id="logo">MORAES SALGADOS</a>
+	<a href="./index.html" id="logo"><img src="./img/mora.jpg" alt="logo da empresa(coxinha em cima de um livro de receitas)">
+  </a>
 	<button id="openMenu">&#9776;</button>
 	<nav id="menu">
 		<button id="closeMenu">X</button>
@@ -34,138 +35,108 @@
 <main>
   <div class="galeria">
     <div class="content">
-        <img src="./img/COXINHA.png">
-        <h3>Coxinha</h3>
-        <p>Vários Tipos de Sabores</p>
-        <h6>R$5,00 Un.</h6>
-        <ul>
-          <i class="fa-solid fa-droplet"></i>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star"></i></li>
-        </ul>
-        <button class="cmp-1">Eu Quero!</button>
+      <img src="./img/COXINHA.png">
+      <h3>Coxinhas</h3>
+      <h4>Sabores variados</h4>
+      <h6>R$5,00 </h6>
+      <ul>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
+      </ul>
+      <a href="./paginas/sal.html"><a href="./paginas/sal.html"><button class="cmp-1">Eu Quero!</button></a></a>
     </div>
 
     <div class="content">
         <img src="./img/BOL_QUEIJO.jpg">
         <h3>Bolinhos</h3>
-        <p>Vários Tipos de Sabores</p>
-        <h6>R$5,00 Un.</h6>
+        <h4>Sabores variados</h4>
+        <h6>R$5,00 </h6>
         <ul>
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star"></i></li>
-            <li><i class="fa fa-star"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
         </ul>
-        <button class="cmp-1">Eu Quero!</button>
+        <a href="./paginas/sal.html"><button class="cmp-1">Eu Quero!</button></a>
     </div>
 
     <div class="content">
         <img src="./img/CROQUETE_CARNE.webp">
-        <h3>Croquete</h3>
-        <p>Vários Tipos de Sabores</p>
-        <h6>R$5,00 Un.</h6>
+        <h3>Croquetes</h3>
+        <h4>Sabores variados</h4>
+        <h6>R$5,00 </h6>
         <ul>
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
         </ul>
-        <button class="cmp-1">Eu Quero!</button>
+        <a href="./paginas/sal.html"><button class="cmp-1">Eu Quero!</button></a>
     </div>
 
     <div class="content">
         <img src="./img/KIBE.jpeg">
-        <h3>Kibe</h3>
-        <p>Vários Tipos de Sabores</p>
-        <h6>R$5,00 Un.</h6>
+        <h3>Kibes</h3>
+        <h4>Sabor Unico</h4>
+        <h6>R$5,00 </h6>
         <ul>
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star checked"></i></li>
             <li><i class="fa fa-star checked"></i></li>
-            <li><i class="fa fa-star"></i></li>
+            <li><i class="fa fa-star checked"></i></li>
         </ul>
-        <button class="cmp-1">Eu Quero!</button>
-    </div>
-
-    <div class="content">
-      <img src="./img/CROQUETE_PRESUNTO.jpg">
-      <h3>Croquete</h3>
-      <p>Vários Tipos de Sabores</p>
-      <h6>R$5,00 Un.</h6>
-      <ul>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star"></i></li>
-      </ul>
-      <button class="cmp-1">Eu Quero!</button>
+        <a href="./paginas/sal.html"><button class="cmp-1">Eu Quero!</button></a>
     </div>
 
     <div class="content">
       <img src="./img/EMPADA.jpg">
-      <h3>Empadinha</h3>
-      <p>Vários Tipos de Sabores</p>
-      <h6>R$5,00 Un.</h6>
+      <h3>Empadinhas</h3>
+      <h4>Sabores variados</h4>
+      <h6>R$5,00 </h6>
       <ul>
           <li><i class="fa fa-star checked"></i></li>
           <li><i class="fa fa-star checked"></i></li>
           <li><i class="fa fa-star checked"></i></li>
           <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
       </ul>
-      <button class="cmp-1">Eu Quero!</button>
+      <a href="./paginas/sal.html"><button class="cmp-1">Eu Quero!</button></a>
     </div>
 
     <div class="content">
       <img src="./img/RISOLES_CARNE.jpg">
       <h3>Risoles</h3>
-      <p>Vários Tipos de Sabores</p>
-      <h6>R$5,00 Un.</h6>
+      <h4>Sabores variados</h4>
+      <h6>R$5,00 </h6>
       <ul>
           <li><i class="fa fa-star checked"></i></li>
           <li><i class="fa fa-star checked"></i></li>
           <li><i class="fa fa-star checked"></i></li>
           <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
       </ul>
-      <button class="cmp-1">Eu Quero!</button>
-    </div>
-
-    <div class="content">
-      <img src="./img/RISOLES_PRESUNTO.jpeg">
-      <h3>Riles</h3>
-      <p>Vários Tipos de Sabores</p>
-      <h6>R$5,00 Un.</h6>
-      <ul>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star"></i></li>
-      </ul>
-      <button class="cmp-1">Eu Quero!</button>
+      <a href="./paginas/sal.html"><button class="cmp-1">Eu Quero!</button></a>
     </div>
 
     <div class="content">
       <img src="./img/SALSICHA.jpg">
-      <h3>Enroladinho de Salsicha</h3>
-      <p>Feito no maior amor e carinho, com toda a tecnologia de alta qualidade</p>
-      <h6>R$5,00 Un.</h6>
+      <h3>Salsichas Empanadas</h3>
+      <h4>Sabores variados</h4>
+      <h6>R$5,00 </h6>
       <ul>
           <li><i class="fa fa-star checked"></i></li>
           <li><i class="fa fa-star checked"></i></li>
           <li><i class="fa fa-star checked"></i></li>
           <li><i class="fa fa-star checked"></i></li>
-          <li><i class="fa fa-star"></i></li>
+          <li><i class="fa fa-star checked"></i></li>
       </ul>
-      <button class="cmp-1">Eu Quero!</button>
+      <a href="./paginas/sal.html"><button class="cmp-1">Eu Quero!</button></a>
   </div>
 
   </div>
