--- a/paginas/sal.html
+++ b/paginas/sal.html
@@ -35,151 +35,27 @@
 </header>
 
 <main>
-    <!-- <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            <div class="card">
-                    <div class="content">
-                        <div class="profile">
-                            <img src="https://im.ge/i/9G1ApY" alt="salcicha">
+    <div class="galeria">
+        <div class="content">
+            <div class="container">
+                <div class="card">
+                    <div class="face face1">
+                        <div class="content2">
+                            <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true">
+                            <h3>Design</h3>
                         </div>
-                        <h2>Teste <br> <span>Teste de Card-Dropdown</span></h2>
                     </div>
-                    <ul class="nav">
-                        <li>
-                            <ion-icon name="archive-outline"></ion-icon>
-                            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit</a>
-                        </li>
-                    </ul>
-                    <div class="toggle">
-                        <ion-icon name="chevron-down-outline"></ion-icon>
+                    <div class="face face2">
+                        <div class="content3">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
+                                <a href="#">Read More</a>
+                        </div>
                     </div>
                 </div>
-          </div>
-          <div class="col-sm">
-            <div class="card">
-                    <div class="content">
-                        <div class="profile">
-                            <img src="./img/profile.jpg" alt="profile">
-                        </div>
-                        <h2>Teste <br> <span>Teste de Card-Dropdown</span></h2>
-                    </div>
-                    <ul class="nav">
-                        <li>
-                            <ion-icon name="archive-outline"></ion-icon>
-                            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit</a>
-                        </li>
-                    </ul>
-                    <div class="toggle">
-                        <ion-icon name="chevron-down-outline"></ion-icon>
-                    </div>
-                </div>
-          </div>
-          <div class="col-sm">
-            <div class="card">
-                    <div class="content">
-                        <div class="profile">
-                            <img src="./img/profile.jpg" alt="profile">
-                        </div>
-                        <h2>Teste <br> <span>Teste de Card-Dropdown</span></h2>
-                    </div>
-                    <ul class="nav">
-                        <li>
-                            <ion-icon name="archive-outline"></ion-icon>
-                            <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit</a>
-                        </li>
-                    </ul>
-                    <div class="toggle">
-                        <ion-icon name="chevron-down-outline"></ion-icon>
-                    </div>
-                </div>
-          </div>
-        </div>
-    </div> -->
-
-  <div class="galeria">
-    <div class="content">
-            <div class="profile">
-                <img src="https://i.im.ge/2023/08/03/9G1ApY.SALSICHA.jpg" alt="salcicha">
-            </div>
-            <h2>Salsicha<br> <span>Empanada</span></h2>
-        <ul class="nav">
-            <li>
-                <ion-icon name="archive-outline"></ion-icon>
-                <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eius eum animi dolore laboriosam, voluptatem ab ipsam, distinctio, repudiandae eveniet doloribus quae incidunt quis recusandae ipsum quaerat accusamus. Molestiae, laboriosam!</a>
-            </li>
-        </ul>
-        <div class="toggle">
-            <ion-icon name="arrow-down-outline"></ion-icon>
+          <a href="./paginas/sal.html"><a href="./paginas/sal.html"><button class="cmp-1">Eu Quero!</button></a></a>
         </div>
     </div>
-
-
-    <div class="content">
-        <img src="./img/BOL_QUEIJO.jpg">
-        <h3>Bolinhos</h3>
-        <p>Vários Tipos de Sabores</p>
-        <h6>R$5,00 Un.</h6>
-        <button class="cmp-1">Eu Quero!</button>
     </div>
-
-    <div class="content">
-        <img src="./img/CROQUETE_CARNE.webp">
-        <h3>Croquete</h3>
-        <p>Vários Tipos de Sabores</p>
-        <h6>R$5,00 Un.</h6>
-        <button class="cmp-1">Eu Quero!</button>
-    </div>
-
-    <div class="content">
-        <img src="./img/KIBE.jpeg">
-        <h3>Kibe</h3>
-        <p>Vários Tipos de Sabores</p>
-        <h6>R$5,00 Un.</h6>
-        <button class="cmp-1">Eu Quero!</button>
-    </div>
-
-    <div class="content">
-      <img src="./img/CROQUETE_PRESUNTO.jpg">
-      <h3>Croquete</h3>
-      <p>Vários Tipos de Sabores</p>
-      <h6>R$5,00 Un.</h6>
-      <button class="cmp-1">Eu Quero!</button>
-    </div>
-
-    <div class="content">
-      <img src="./img/EMPADA.jpg">
-      <h3>Empadinha</h3>
-      <p>Vários Tipos de Sabores</p>
-      <h6>R$5,00 Un.</h6>
-      <button class="cmp-1">Eu Quero!</button>
-    </div>
-
-    <div class="content">
-      <img src="./img/RISOLES_CARNE.jpg">
-      <h3>Risoles</h3>
-      <p>Vários Tipos de Sabores</p>
-      <h6>R$5,00 Un.</h6>
-      <button class="cmp-1">Eu Quero!</button>
-    </div>
-
-    <div class="content">
-      <img src="./img/RISOLES_PRESUNTO.jpeg">
-      <h3>Riles</h3>
-      <p>Vários Tipos de Sabores</p>
-      <h6>R$5,00 Un.</h6>
-      <button class="cmp-1">Eu Quero!</button>
-    </div>
-
-    <div class="content">
-      <img src="./img/SALSICHA.jpg">
-      <h3>Enroladinho de Salsicha</h3>
-      <p>Feito no maior amor e carinho, com toda a tecnologia de alta qualidade</p>
-      <h6>R$5,00 Un.</h6>
-      <button class="cmp-1">Eu Quero!</button>
-  </div>
-
-  </div>
 
 </main>
 
