--- a/exetos/DROP/index.html
+++ b/exetos/DROP/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>
-        <div class="card">
+        <!-- <div class="card">
             <div class="face face1">
                 <div class="content">
                     <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/code_128.png?raw=true">
@@ -51,7 +51,7 @@
                         <a href="#">Read More</a>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 <!-- partial -->
