--- a/exetos/prontosub/sal copy.html
+++ b/exetos/prontosub/sal copy.html
@@ -96,6 +96,8 @@
 
 
 	<!--JAVASCRIPT-->
+    <!-- <script src="./js/script.js"></script> -->
+	<!-- <script type="text/javascript" src="../js/script.js"></script> -->
     <script src="./script copy.js"></script>
     <script src="./script.js"></script>
 
