--- a/exetos/prontosub/segundo..html
+++ b/exetos/prontosub/segundo..html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 	<!--CSS-->
-    <link rel="stylesheet" type="text/css" href="./style copy.css">
+    <link rel="stylesheet" type="text/css" href="./por.css">
 
 	<title>MORAES SALGADOS</title>
 
@@ -35,40 +35,22 @@
 </header>
 
 <main>
-    <div class="galeria">
-        <div class="content">
-            <div class="profile">
-                <img src="./img/COXINHA.png" alt="Coxinha frita">
-            </div>
-                <h2>Coxinhas<br> <span>Fritas</span></h2>
-                <ul class="nav"><span>Sabores:</span>
-                    <li>
-                        <a href="#">Frango</a>
-                        <br>
-                        <a href="#">Calabresa</a>
-                        <br>
-                        <a href="#">Carne-Moída</a>
-                    </li>
-                </ul>
-            <div class="toggle">
-                <ion-icon name="arrow-down-outline"></ion-icon>
-            </div>
-        </div>
-    
-
-        <div class="content-comp">
-            <div class="container-comp">
-                <div class="card-comp">
-                    <div class="face face1">
-                        <div class="content-face1">
-                            <img src="./img/COXINHA.png" alt="imagem de uma coxinha frita">
-                            <h3>Coxinha</h3>
+    <div id="comp">
+        <div class="galeria">
+            <div class="content">
+                <div class="container">
+                    <div class="card">
+                        <div class="face face1">
+                            <div class="content-face1">
+                                <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true">
+                                <h3>Design</h3>
+                            </div>
                         </div>
-                    </div>
-                    <div class="face face2">
-                        <div class="content-face2">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                                <a href="#">Read More</a>
+                        <div class="face face2">
+                            <div class="content-face2">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
+                                    <a href="#">Read More</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -76,12 +58,11 @@
         </div>
     </div>
 
-</div>
-
-    
-
-
-
+    <div class="ola">
+        <h1>Teste de script</h1>
+        <div><input type="text"></div>
+        <button>ola teste</button>
+    </div>
 
 </main>
 
@@ -96,8 +77,7 @@
 
 
 	<!--JAVASCRIPT-->
-    <script src="./script copy.js"></script>
-    <script src="./script.js"></script>
+    <script src="./scri.js"></script>
 
 	<!--JAVASCRIPT BOODSTRAP-->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
