--- a/paginas/sal.html
+++ b/paginas/sal.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 	<!--CSS-->
-    <link rel="stylesheet" type="text/css" href="./style copy.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 
 	<title>MORAES SALGADOS</title>
 
@@ -96,8 +96,8 @@
 
 
 	<!--JAVASCRIPT-->
-    <script src="./script copy.js"></script>
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/troca.js"></script>
 
 	<!--JAVASCRIPT BOODSTRAP-->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
