--- a/paginas/sal.html
+++ b/paginas/sal.html
@@ -38,7 +38,7 @@
     <div class="galeria">
         <div class="content">
             <div class="profile">
-                <img src="./img/COXINHA.png" alt="Coxinha frita">
+                <img src="../img/COXINHA.png" alt="Coxinha frita">
             </div>
                 <h2>Coxinhas<br> <span>Fritas</span></h2>
                 <ul class="nav"><span>Sabores:</span>
@@ -61,28 +61,183 @@
                 <div class="card-comp">
                     <div class="face face1">
                         <div class="content-face1">
-                            <img src="./img/COXINHA.png" alt="imagem de uma coxinha frita">
-                            <h3>Coxinha</h3>
+                            <img src="../img/COXINHA.png" alt="imagem de uma coxinha frita">
+                            <h3>Coxinhas</h3>
                         </div>
                     </div>
                     <div class="face face2">
                         <div class="content-face2">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                                <a href="#">Read More</a>
+                            <h5>Temos nos sabores de:</h5>
+                            <p>
+                                <ul>
+                                    <li>Frango</li>
+                                    <li>Carne</li>
+                                    <li>Calabresa</li>
+                                    <li>Sabores Personalizados</li>
+                                </ul>
+                            </p>
+                                <a href="#">Compre</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="content-comp">
+            <div class="container-comp">
+                <div class="card-comp">
+                    <div class="face face1">
+                        <div class="content-face1">
+                            <img src="../img/BOL_QUEIJO.jpg" alt="imagem de um bolinho de queijo frito">
+                            <h3>Bolinhos</h3>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <div class="content-face2">
+                            <h5>Temos nos sabores de:</h5>
+                            <p>
+                                <ul>
+                                    <li>Presunto e Queijo</li>
+                                    <li>Carne</li>
+                                    <li>Calabresa</li>
+                                    <li>Queijo</li>
+                                </ul>
+                            </p>
+                                <a href="#">Compre</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-comp">
+            <div class="container-comp">
+                <div class="card-comp">
+                    <div class="face face1">
+                        <div class="content-face1">
+                            <img src="../img/CROQUETE_CARNE.webp" alt="imagem de um croquete de carne frito">
+                            <h3>Croquetes</h3>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <div class="content-face2">
+                            <h5>Temos nos sabores de:</h5>
+                            <p>
+                                <ul>
+                                    <li>Carne</li>
+                                    <li>Calabresa</li>
+                                    <li>Presunto e Queijo</li>
+                                    <li>Presunto</li>
+                                </ul>
+                            </p>
+                                <a href="#">Compre</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-comp">
+            <div class="container-comp">
+                <div class="card-comp">
+                    <div class="face face1">
+                        <div class="content-face1">
+                            <img src="../img/EMPADA.jpg" alt="imagem de uma Empadinha assada">
+                            <h3>Empadinhas</h3>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <div class="content-face2">
+                            <h5>Temos nos sabores de:</h5>
+                            <p>
+                                <ul>
+                                    <li>Frango</li>
+                                </ul>
+                            </p>
+                                <a href="#">Compre</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-comp">
+            <div class="container-comp">
+                <div class="card-comp">
+                    <div class="face face1">
+                        <div class="content-face1">
+                            <img src="../img/KIBE.jpeg" alt="imagem de um kibe frito">
+                            <h3>Kibe</h3>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <div class="content-face2">
+                            <h5>Temos nos sabores de:</h5>
+                            <p>
+                                <ul>
+                                    <li>Carne</li>
+                                    <li>Carne com Queijo</li>
+                                </ul>
+                            </p>
+                                <a href="#">Compre</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-comp">
+            <div class="container-comp">
+                <div class="card-comp">
+                    <div class="face face1">
+                        <div class="content-face1">
+                            <img src="../img/RISOLES_CARNE.jpg" alt="imagem de um risoles frito">
+                            <h3>Risoles</h3>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <div class="content-face2">
+                            <h5>Temos nos sabores de:</h5>
+                            <p>
+                                <ul>
+                                    <li>Presunto e Queijo</li>
+                                    <li>Carne</li>
+                                    <li>Calabresa</li>
+                                </ul>
+                            </p>
+                                <a href="#">Compre</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-comp">
+            <div class="container-comp">
+                <div class="card-comp">
+                    <div class="face face1">
+                        <div class="content-face1">
+                            <img src="../img/SALSICHA.jpg" alt="imagem de um enroladinho de salsicha">
+                            <h3>Enroladinho de Salsicha</h3>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <div class="content-face2">
+                            <h5>Temos nos sabores de:</h5>
+                            <p>
+                                <ul>
+                                    <li>Salsicha</li>
+                                </ul>
+                            </p>
+                                <a href="#">Compre</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
-
-</div>
-
-    
-
-
-
-
 </main>
 
 <!-- <aside>
