--- a/paginas/sal.html
+++ b/paginas/sal.html
@@ -37,25 +37,6 @@
 <main>
     <div class="galeria">
 
-        <div class="content">
-            <div class="profile">
-                <img src="../img/COXINHA.png" alt="Coxinha frita">
-            </div>
-                <h2>Coxinhas<br> <span>Fritas</span></h2>
-                <ul class="nav"><span>Sabores:</span>
-                    <li>
-                        <a href="#">Frango</a>
-                        <br>
-                        <a href="#">Calabresa</a>
-                        <br>
-                        <a href="#">Carne-Moída</a>
-                    </li>
-                </ul>
-            <div class="toggle">
-                <ion-icon name="arrow-down-outline"></ion-icon>
-            </div>
-        </div>
-
         <div class="content-comp">
             <div class="container-comp">
                 <div class="card-comp">
@@ -236,6 +217,134 @@
             </div>
         </div>
 
+        <div class="content">
+            <div class="profile">
+                <img src="../img/COXINHA.png" alt="Coxinha frita">
+            </div>
+                <h2>Coxinhas<br> <span>Fritas</span></h2>
+                <ul class="nav"><span>Sabores:</span>
+                    <li>
+                        <a href="#">Frango</a>
+                        <br>
+                        <a href="#">Calabresa</a>
+                        <br>
+                        <a href="#">Carne-Moída</a>
+                    </li>
+                </ul>
+            <div class="toggle">
+                <ion-icon name="arrow-down-outline"></ion-icon>
+            </div>
+        </div>
+
+        <div class="content">
+            <div class="profile">
+                <img src="../img/BOL_QUEIJO.jpg" alt="bolinho frito">
+            </div>
+                <h2>Bolinhos<br> <span>Fritos</span></h2>
+                <ul class="nav"><span>Sabores:</span>
+                    <li>
+                        <a href="#">Presunto e Queijo</a>
+                        <br>
+                        <a href="#">Ovo</a>
+                        <br>
+                        <a href="#">Calabresa</a>
+                        <br>
+                        <a href="#">Queijo</a>
+                    </li>
+                </ul>
+            <div class="toggle">
+                <ion-icon name="arrow-down-outline"></ion-icon>
+            </div>
+        </div>
+
+        <div class="content">
+            <div class="profile">
+                <img src="../img/CROQUETE_CARNE.webp" alt="Croquete frito">
+            </div>
+                <h2>Bolinhos<br> <span>Fritos</span></h2>
+                <ul class="nav"><span>Sabores:</span>
+                    <li>
+                        <a href="#">Presunto e Queijo</a>
+                        <br>
+                        <a href="#">Carne</a>
+                        <br>
+                        <a href="#">Calabresa</a>
+                    </li>
+                </ul>
+            <div class="toggle">
+                <ion-icon name="arrow-down-outline"></ion-icon>
+            </div>
+        </div>
+
+        <div class="content">
+            <div class="profile">
+                <img src="../img/EMPADA.jpg" alt="empadinha assada">
+            </div>
+                <h2>Empadinha<br> <span>assada</span></h2>
+                <ul class="nav"><span>Sabores:</span>
+                    <li>
+                        <a href="#">Frango</a>
+                        <br>
+                    </li>
+                </ul>
+            <div class="toggle">
+                <ion-icon name="arrow-down-outline"></ion-icon>
+            </div>
+        </div>
+
+        <div class="content">
+            <div class="profile">
+                <img src="../img/KIBE.jpeg" alt="kibe frito">
+            </div>
+                <h2>Kibe<br> <span>Frito</span></h2>
+                <ul class="nav"><span>Sabores:</span>
+                    <li>
+                        <a href="#">Carne com Queijo</a>
+                        <br>
+                        <a href="#">Carne</a>
+                        <br>
+                    </li>
+                </ul>
+            <div class="toggle">
+                <ion-icon name="arrow-down-outline"></ion-icon>
+            </div>
+        </div>
+
+        <div class="content">
+            <div class="profile">
+                <img src="../img/RISOLES_CARNE.jpg" alt="risoles frito">
+            </div>
+                <h2>Risoles<br> <span>Frito</span></h2>
+                <ul class="nav"><span>Sabores:</span>
+                    <li>
+                        <a href="#">Carne</a>
+                        <br>
+                        <a href="#">Presunto e Queijo</a>
+                        <br>
+                        <a href="#">Calabresa</a>
+                        <br>
+                    </li>
+                </ul>
+            <div class="toggle">
+                <ion-icon name="arrow-down-outline"></ion-icon>
+            </div>
+        </div>
+
+        <div class="content">
+            <div class="profile">
+                <img src="../img/RISOLES_CARNE.jpg" alt="risoles frito">
+            </div>
+                <h2>Enroladinho de <br> <span>Salsicha</span></h2>
+                <ul class="nav"><span>Sabores:</span>
+                    <li>
+                        <a href="#">Enroladinho de Salsicha</a>
+                        <br>
+                    </li>
+                </ul>
+            <div class="toggle">
+                <ion-icon name="arrow-down-outline"></ion-icon>
+            </div>
+        </div>
 
     </div>
 </main>
