--- a/paginas/sal.html
+++ b/paginas/sal.html
@@ -217,135 +217,6 @@
             </div>
         </div>
 
-        <div class="content">
-            <div class="profile">
-                <img src="../img/COXINHA.png" alt="Coxinha frita">
-            </div>
-                <h2>Coxinhas<br> <span>Fritas</span></h2>
-                <ul class="nav"><span>Sabores:</span>
-                    <li>
-                        <a href="#">Frango</a>
-                        <br>
-                        <a href="#">Calabresa</a>
-                        <br>
-                        <a href="#">Carne-Moída</a>
-                    </li>
-                </ul>
-            <div class="toggle">
-                <ion-icon name="arrow-down-outline"></ion-icon>
-            </div>
-        </div>
-
-        <div class="content">
-            <div class="profile">
-                <img src="../img/BOL_QUEIJO.jpg" alt="bolinho frito">
-            </div>
-                <h2>Bolinhos<br> <span>Fritos</span></h2>
-                <ul class="nav"><span>Sabores:</span>
-                    <li>
-                        <a href="#">Presunto e Queijo</a>
-                        <br>
-                        <a href="#">Ovo</a>
-                        <br>
-                        <a href="#">Calabresa</a>
-                        <br>
-                        <a href="#">Queijo</a>
-                    </li>
-                </ul>
-            <div class="toggle">
-                <ion-icon name="arrow-down-outline"></ion-icon>
-            </div>
-        </div>
-
-        <div class="content">
-            <div class="profile">
-                <img src="../img/CROQUETE_CARNE.webp" alt="Croquete frito">
-            </div>
-                <h2>Bolinhos<br> <span>Fritos</span></h2>
-                <ul class="nav"><span>Sabores:</span>
-                    <li>
-                        <a href="#">Presunto e Queijo</a>
-                        <br>
-                        <a href="#">Carne</a>
-                        <br>
-                        <a href="#">Calabresa</a>
-                    </li>
-                </ul>
-            <div class="toggle">
-                <ion-icon name="arrow-down-outline"></ion-icon>
-            </div>
-        </div>
-
-        <div class="content">
-            <div class="profile">
-                <img src="../img/EMPADA.jpg" alt="empadinha assada">
-            </div>
-                <h2>Empadinha<br> <span>assada</span></h2>
-                <ul class="nav"><span>Sabores:</span>
-                    <li>
-                        <a href="#">Frango</a>
-                        <br>
-                    </li>
-                </ul>
-            <div class="toggle">
-                <ion-icon name="arrow-down-outline"></ion-icon>
-            </div>
-        </div>
-
-        <div class="content">
-            <div class="profile">
-                <img src="../img/KIBE.jpeg" alt="kibe frito">
-            </div>
-                <h2>Kibe<br> <span>Frito</span></h2>
-                <ul class="nav"><span>Sabores:</span>
-                    <li>
-                        <a href="#">Carne com Queijo</a>
-                        <br>
-                        <a href="#">Carne</a>
-                        <br>
-                    </li>
-                </ul>
-            <div class="toggle">
-                <ion-icon name="arrow-down-outline"></ion-icon>
-            </div>
-        </div>
-
-        <div class="content">
-            <div class="profile">
-                <img src="../img/RISOLES_CARNE.jpg" alt="risoles frito">
-            </div>
-                <h2>Risoles<br> <span>Frito</span></h2>
-                <ul class="nav"><span>Sabores:</span>
-                    <li>
-                        <a href="#">Carne</a>
-                        <br>
-                        <a href="#">Presunto e Queijo</a>
-                        <br>
-                        <a href="#">Calabresa</a>
-                        <br>
-                    </li>
-                </ul>
-            <div class="toggle">
-                <ion-icon name="arrow-down-outline"></ion-icon>
-            </div>
-        </div>
-
-        <div class="content">
-            <div class="profile">
-                <img src="../img/RISOLES_CARNE.jpg" alt="risoles frito">
-            </div>
-                <h2>Enroladinho de <br> <span>Salsicha</span></h2>
-                <ul class="nav"><span>Sabores:</span>
-                    <li>
-                        <a href="#">Enroladinho de Salsicha</a>
-                        <br>
-                    </li>
-                </ul>
-            <div class="toggle">
-                <ion-icon name="arrow-down-outline"></ion-icon>
-            </div>
-        </div>
-
     </div>
 </main>
 
@@ -361,7 +232,7 @@
 
 	<!--JAVASCRIPT-->
     <script src="./js/script.js"></script>
-    <script src="./js/troca.js"></script>
+    <!-- <script src="./js/troca.js"></script> -->
 
 	<!--JAVASCRIPT BOODSTRAP-->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
