--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 	<nav id="menu">
 		<button id="closeMenu">X</button>
 		<a href="./index.html">Inicio</a>
-		<a href="./paginas/sal.html">Salgados</a>
 		<a href="#">Sobre</a>
 		<a href="#">Contato</a>
+    <a href="#"><button class="btn-login" >Login</button></a>
 	</nav>
 </header>
 
