--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
          <i class="fas fa-star-half-alt"></i>
          <span>( 250 )</span>
       </div>
+         <!-- <select name="select" multiple multiselect-search="true" multiselect-select-all="true" multiselect-max-items="10">
+            <option >ola</option>
+            <option >ola</option>
+            <option >oa</option>
+         </select> -->
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
       <div class="price">R$5,OO unid.</div>
       <div class="buttons">
@@ -225,7 +230,8 @@
 
 
 	<!--JAVASCRIPT-->
-	<script type="text/javascript" src="./js/script.js"></script>
+	<script src="./js/script.js"></script>
+   <script src="./js/drop.js"></script>
 
 	<!--JAVASCRIPT BOODSTRAP-->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
