--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<a href="./index.html">Inicio</a>
 		<a href="#">Sobre</a>
 		<a href="#">Contato</a>
-      <a href="#" class="loginBtn">Login</a>
+      <a href="./paginas/Login.html" class="loginBtn">Login</a>
 	</nav>
 </header>
 
