--- a/paginas/Login.html
+++ b/paginas/Login.html
@@ -35,7 +35,7 @@
     </nav>
 </header>
 
-<main>
+<main class="main">
     <div class="container">
         <!-- <div class="backgroud"></div> -->
 
@@ -110,6 +110,7 @@
 <script src="./js/login.js"></script>
 <script src="../js/script.js"></script>
 <script src="../js/responsive.js"></script>
+<script src="./js/sumirLogin.js"></script>
 
 <!--JavaScript Font Icones-->
 <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
