--- a/teste-mobile/pronto.html
+++ b/teste-mobile/pronto.html
@@ -6,44 +6,54 @@
 
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="pronto.css">
 
     <title>barra de navegação</title>
 </head>
 <body>
-    
-<footer>
 
+<footer>
     <header>
         <nav>
             <div class="content">
                 <ul class="inlineList">
                     <div class="fundo-icon">
-                        <li><box-icon type='solid' name='home-alt-2'></box-icon></li>
+                        <li class="li1">
+                            <a href="./pronto.html"><box-icon type='solid' name='home-alt-2'></box-icon></a>
+                        </li>
                     </div>
+
                         <div class="fundo1"></div>
+
                     <div class="fundo-icon">
-                        <li><box-icon name='droplet' type='solid' ></box-icon></li>
+                        <li class="li2">
+                            <a href="./pronto2.html"><box-icon name='droplet' type='solid' ></box-icon></a>
+                        </li>
                     </div>
+
                         <div class="fundo2"></div>
+
                     <div class="fundo-icon">
-                        <li><box-icon type='solid' name='phone'></box-icon></li>
+                        <li class="li3">
+                            <a href="./pronto3.html"><box-icon type='solid' name='phone'></box-icon></a>
+                        </li>
                     </div>
+
                         <div class="fundo3"></div>
+
                     <div class="fundo-icon">
-                        <li><box-icon type='solid' name='user'></box-icon></li>
+                        <li class="li4">
+                            <a href="pronto4.html"><box-icon type='solid' name='user'></box-icon></a>
+                        </li>
                     </div>
                         <div class="fundo4"></div>
                 </ul>
             </div>
         </nav>
     </header>
-
 </footer>
 
-
-
 </body>
-<script src="script.js"></script>
+<script src="pronto.js"></script>
 <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </html>
