--- a/sobre.html
+++ b/sobre.html
@@ -34,7 +34,15 @@
 <main id="main">
    <div class="container">
 
-    <h3 class="title"> Aproveite nossos produtos </h3>
+    <h3 class="title">Quem somos nós?</h3>
+	<p class="texto-main">Somos uma micro empresa no ramo alimenticío de Salgados diversificados </p>
+
+	<br><br>
+
+	<h3 class="title">Algumas das fotos da nossa empresa</h3>
+	<p class="texto-main"><img src="./img/fznd/img1.jpg" alt="aqui entra uma foto do meio de preparo dos salgados"></p>
+
+	<p class="image-main"><img src="#" alt="aqui entra uma imagem da dona da empresa"></p>
 
    </div>
 </main>
