--- a/sobre.html
+++ b/sobre.html
@@ -25,9 +25,9 @@
 	<button id="openMenu" onclick="abrir()">&#9776;</button>
 	<nav id="menu">
 		<button id="closeMenu">X</button>
-		<a href="./index.html">Inicio</a>
-		<a href="./sobre.html">Sobre</a>
-		<a href="#">Contato</a>
+		<a class="aref" href="./index.html">Inicio</a>
+		<a class="aref" href="./sobre.html">Sobre</a>
+		<a class="aref" href="#">Contato</a>
       <a href="./paginas/Login.html" class="loginBtn">Login</a>
 	</nav>
 </header>
