--- a/PAGINAS/index.html
+++ b/PAGINAS/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> meta.codes - Animated Login and Registration Form </title>
+    <title>Página de Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -32,7 +32,7 @@
                     <p>Already have an account? <a href="#" class="signIn-link">Sign In</a></p>
                 </div>
                 <div class="sair">
-                    <input type="submit" value="Voltar">
+                    <a href="../index.html">Voltar</a>
                 </div>
             </form>
         </div>
@@ -56,7 +56,7 @@
                     <p>Don't have an account? <a href="#" class="signUp-link">Sign Up</a></p>
                 </div>
                 <div class="sair">
-                    <input type="submit" value="Voltar">
+                    <a href="../index.html">Voltar</a>
                 </div>
             </form>
         </div>
