--- a/login.html
+++ b/login.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Login</title>
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" type="text/css" href="./CSS/PAGINAS/login.css">
+
 </head>
 
 <body>
@@ -32,7 +34,7 @@
                     <p>Already have an account? <a href="#" class="signIn-link">Sign In</a></p>
                 </div>
                 <div class="sair">
-                    <a href="../index.html">Voltar</a>
+                    <a href="./index.html">Voltar</a>
                 </div>
             </form>
         </div>
@@ -56,13 +58,13 @@
                     <p>Don't have an account? <a href="#" class="signUp-link">Sign Up</a></p>
                 </div>
                 <div class="sair">
-                    <a href="../index.html">Voltar</a>
+                    <a href="./index.html">Voltar</a>
                 </div>
             </form>
         </div>
     </div>
 
-    <script src="script.js"></script>
 </body>
-
+    <!--JAVASCRIPT-->
+    <script src="./JS/login.js"></script>
 </html>
