--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 	<!--CSS-->
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
-	<link rel="stylesheet" type="text/css" href="./css/index.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/style.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/PAGINAS/index.css">
 
 	<title>MORAES SALGADOS</title>
 
 </head>
 <body>
 
-<header>
+<header id="header">
 	<a href="./index.html" id="logo"><img src="./img/mora.jpg" alt="logo da empresa(coxinha em cima de um livro de receitas)">
    </a>
 	<button id="openMenu" onclick="abrir()">&#9776;</button>
@@ -28,7 +28,7 @@
 		<a href="./index.html">Inicio</a>
 		<a href="./sobre.html">Sobre</a>
 		<a href="#">Contato</a>
-      <a href="./PAGINAS/index.html" class="loginBtn">Login</a>
+      <a href="./login.html" class="loginBtn">Login</a>
 	</nav>
 </header>
 
@@ -80,8 +80,48 @@
             <div class="price">R$5,OO unid.</div>
          </div>
 
-      </div>
+         <div class="product" data-name="p-1">
+            <img src="./img/coxinha.jpeg" alt="">
+            <h3>Coxinhas</h3>
+            <div class="price">R$5,OO unid.</div>
+         </div>
 
+         <div class="product" data-name="p-2">
+            <img src="./img/bolinho.jpeg" alt="">
+            <h3>Bolinhos</h3>
+            <div class="price">R$5,OO unid.</div>
+         </div>
+
+         <div class="product" data-name="p-3">
+            <img src="./img/Rissoles .jpeg" alt="">
+            <h3>Risoles</h3>
+            <div class="price">R$5,OO unid.</div>
+         </div>
+
+         <div class="product" data-name="p-4">
+            <img src="./img/Kibe.jpeg" alt="">
+            <h3>Kibe</h3>
+            <div class="price">R$5,OO unid.</div>
+         </div>
+
+         <div class="product" data-name="p-5">
+            <img src="./img/salsicha.jpeg" alt="">
+            <h3>Salsicha</h3>
+            <div class="price">R$5,OO unid.</div>
+         </div>
+
+         <div class="product" data-name="p-6">
+            <img src="./img/Empada.jpeg" alt="">
+            <h3>Empadinha</h3>
+            <div class="price">R$5,OO unid.</div>
+         </div>
+
+         <div class="product" data-name="p-6">
+            <img src="./img/croquete.png" alt="">
+            <h3>Croquete</h3>
+            <div class="price">R$5,OO unid.</div>
+         </div>
+      </div>
    </div>
 
    <div class="products-preview">
@@ -124,7 +164,7 @@
          <div class="price">R$5,OO unid.</div>
          <div class="buttons">
             <a href="#" class="cart">Add. Minha lista</a>
-            <a href="#" class="cart">Minha lista</a>
+            <a href="./PAGINAS/LISTA/index.html" class="cart">Minha lista</a>
             <button class="btnFechar">Fechar</button>
             <a href="#" class="buy">Comprar</a>
          </div>
@@ -146,7 +186,7 @@
          <div class="price">R$5,OO unid.</div>
          <div class="buttons">
             <a href="#" class="cart">Add. Minha lista</a>
-            <a href="#" class="cart">Minha lista</a>
+            <a href="./PAGINAS/LISTA/index.html" class="cart">Minha lista</a>
             <button class="btnFechar">Fechar</button>
             <a href="#" class="buy">Comprar</a>
          </div>
@@ -168,7 +208,7 @@
          <div class="price">R$5,OO unid.</div>
          <div class="buttons">
             <a href="#" class="cart">Add Minha lista</a>
-            <a href="#" class="cart">Minha lista</a>
+            <a href="./PAGINAS/LISTA/index.html" class="cart">Minha lista</a>
             <button class="btnFechar">Fechar</button>
             <a href="#" class="buy">Comprar</a>
          </div>
@@ -190,7 +230,7 @@
          <div class="price">R$5,OO unid.</div>
          <div class="buttons">
             <a href="#" class="cart">Add Minha lista</a>
-            <a href="#" class="cart">Minha lista</a>
+            <a href="./PAGINAS/LISTA/index.html" class="cart">Minha lista</a>
             <button class="btnFechar">Fechar</button>
             <a href="#" class="buy">Comprar</a>
          </div>
@@ -212,7 +252,7 @@
          <div class="price">R$5,OO unid.</div>
          <div class="buttons">
             <a href="#" class="cart">Add Minha lista</a>
-            <a href="#" class="cart">Minha lista</a>
+            <a href="./PAGINAS/LISTA/index.html" class="cart">Minha lista</a>
             <button class="btnFechar">Fechar</button>
             <a href="#" class="buy">Comprar</a>
          </div>
@@ -234,12 +274,11 @@
          <div class="price">R$5,OO unid.</div>
          <div class="buttons">
             <a href="#" class="cart">Add Minha lista</a>
-            <a href="#" class="cart">Minha lista</a>
+            <a href="./PAGINAS/LISTA/index.html" class="cart">Minha lista</a>
             <button class="btnFechar">Fechar</button>
             <a href="#" class="buy">Comprar</a>
          </div>
       </div>
-
    </div>
 </main>
 
@@ -252,9 +291,9 @@
 </footer>
 
 	<!--JAVASCRIPT-->
-   <script src="./js/drop.js"></script>
-	<script src="./js/script.js"></script>
-   <script src="./js/responsive.js"></script>
+   <script src="./JS/drop.js"></script>
+	<script src="./JS/script.js"></script>
+   <script src="./JS/responsive.js"></script>
 
 	<!--JAVASCRIPT BOODSTRAP-->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
