--- a/sobre.html
+++ b/sobre.html
@@ -27,7 +27,7 @@
 		<button id="closeMenu">X</button>
 		<a href="./index.html">Inicio</a>
 		<a href="./sobre.html">Sobre</a>
-		<a href="./profile-card-ui copy/dist/index.html">Contato</a>
+		<a href="./#">Contato</a>
 		<a href="./login.html" class="loginBtn">Login</a>
 	</nav>
 </header>
